<resources>
    <string name="app_name">IReview</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="title">Title</string>
    <string name="lead_actors">Lead Actors</string>
    <string name="add_movie">Add Movie</string>


    <!-- Back4App Strings -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">TZofpm0RW2jDWBmuSqGEF2r7sGZUt6KxEtzld0wt</string>
    <string name="back4app_client_key">y3cK323CJOaZRwlKaOF8cid0HjXy68mmnc9dYvOL</string>

    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>


    <!-- Firebase Messages -->
    <string name="auth_failed">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>


    <!-- Firebase Database Fiels -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>

    <!-- AddItem Strings -->
    <string name="post_review">Post Review</string>
    <string name="your_review">Your Review</string>

    <string name="import_cover_photo">Import Cover Photo</string>
    <string name="import_image">Import Image</string>

    <string name="add_and_post">Add and Post</string>
    <string name="add">Add</string>
    <string name="post">Post</string>
    <string name="save">Save</string>
    <string name="save_and_post">Save and Post</string>


    <!-- ReadMoreTextView -->
    <string name="read_more">Show More</string>
    <string name="read_less">Show Less</string>

    <!-- GenderSettings Genders -->
    <string-array name="genders">
        <item>Your gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

</resources>
